argocd/apps/rustfs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-route
  namespace: rustfs
spec:
  hostnames:
    - "rustfs.internal"
    - "rustfs-console.internal"
  parentRefs:
    - name: tailscale-gateway
      namespace: tailscale
  rules:
    # Rule for the Console
    - matches:
        - hostname: "rustfs-console.internal"
          path: { type: PathPrefix, value: / }
      backendRefs:
        - name: rustfs-svc
          port: 9001

    # Rule for the S3 API
    - matches:
        - hostname: "rustfs.internal"
          path: { type: PathPrefix, value: / }
      backendRefs:
        - name: rustfs-svc
          port: 9000
